--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -65,6 +65,15 @@
 * Click Save to save the primary source query.
 ---
 ## Task 5. Save your merged results to a dashboard
+* Expand the Visualization pane and select Table.
+* In the top right pane of the Explore for your Merged Results, click the gear icon.
+* Click Save to Dashboard.
+* For Title, type Flight Cancellations & Elevation.
+* Click New Dashboard.
+* For the dashboard name, type Airport Data and click OK.
+* Click Save to Dashboard.
+---
+
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
