--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -32,13 +32,13 @@
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
 ## Task 1. Create a primary query
-* n the Looker navigation menu, click Explore. Under FAA, click Flights.
-* In the left pane, under All Fields, expand Flight Details.
-* Click Carrier and Flight Num.
+* n the Looker navigation menu, click **Explore**. Under FAA, click **Flights**.
+* In the left pane, under All Fields, expand `Flight Details`.
+* Click `Carrier` and `Flight Num`.
 * You can reorder selected fields in the right pane by dragging and dropping the field name.
-* Expand Aircraft Origin and click City.
-* Expand Flight Details and in MEASURES, click Cancelled Count.
-* Expand Arrival Date, hover over Year, and click Filter by field.
+* Expand Aircraft Origin and click `City`.
+* Expand **Flight Details** and in **MEASURES**, click `Cancelled Count`.
+* Expand `Arrival Date`, hover over Year, and click Filter by field.
 * In the Filters pane, set Flights Details Arrival Year to is in the year, and enter 2000.
 * Click Run to see the results of the primary query.
 ---
