--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -38,9 +38,9 @@
 * You can reorder selected fields in the right pane by dragging and dropping the field name.
 * Expand Aircraft Origin and click `City`.
 * Expand **Flight Details** and in **MEASURES**, click `Cancelled Count`.
-* Expand `Arrival Date`, hover over Year, and click Filter by field.
-* In the Filters pane, set Flights Details Arrival Year to is in the year, and enter 2000.
-* Click Run to see the results of the primary query.
+* Expand `Arrival Date`, hover over **Year**, and click `Filter by field`.
+* In the Filters pane, set Flights Details Arrival Year to `is in the year`, and enter *`2000`*.
+* Click **Run** to see the results of the primary query.
 ---
 ## Task 2. Add the next source query
 * In the top right pane of the Explore for your primary query, click Settings.
