--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -43,35 +43,35 @@
 * Click **Run** to see the results of the primary query.
 ---
 ## Task 2. Add the next source query
-* In the top right pane of the Explore for your primary query, click Settings.
-* Click Merge Results. This will open the Choose an Explore window.
-* In the Choose an Explore window, click Airports.
-* In the All Fields pane, click City and Average Elevation.
-* Click Run to see the results of the source query.
+* In the top right pane of the Explore for your primary query, click **Settings**.
+* Click **Merge Results**. This will open the Choose an Explore window.
+* In the Choose an Explore window, click **Airports**.
+* In the All Fields pane, click City and `Average Elevation`.
+* Click **Run** to see the results of the source query.
 * Click Save to merge the query into your primary query.
 ---
 ## Task 3. Check the merge rules and run the merge
 * Change the dropdowns so that the correct dimensions are used in the merge rule.
 ![Look](https://cdn.qwiklabs.com/P6OtDjrZhMFHmYXMYZ3gktq%2BmkQB8OkdI5tSiFds%2BhU%3D)
 * Click Run to view the results of your merged results.
-* Click on Airports Average Elevation to sort the values in descending order.
+* Click on *`Airports Average Elevation`* to sort the values in `descending order`.
 ---
 ## Task 4. Edit the merged results
-* In the Source Queries pane, click the gear icon next to Flights and then click Edit.
+* In the Source Queries pane, click the gear icon next to **Flights** and then click **Edit**.
 * There should be a label Primary next to the gear icon.
 * In the left pane, click All Fields.
-* Expand Aircraft Destination and click City.
-* Click Run to view the results of your modified primary query.
-* Click Save to save the primary source query.
+* Expand **Aircraft Destination** and click `City`.
+* Click **Run** to view the results of your modified primary query.
+* Click **Save** to save the primary source query.
 ---
 ## Task 5. Save your merged results to a dashboard
 * Expand the Visualization pane and select Table.
 * In the top right pane of the Explore for your Merged Results, click the gear icon.
-* Click Save to Dashboard.
-* For Title, type Flight Cancellations & Elevation.
-* Click New Dashboard.
-* For the dashboard name, type Airport Data and click OK.
-* Click Save to Dashboard.
+* Click **Save to Dashboard**.
+* For Title, type **`Flight Cancellations & Elevation`**.
+* Click **New Dashboard**.
+* For the dashboard name, type **`Airport Data`** and click OK.
+* Click **Save to Dashboard**.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
