--- a/TensorFlow Qwik Start/GSP637.md
+++ b/TensorFlow Qwik Start/GSP637.md
@@ -33,16 +33,14 @@
 **🌐Launch Cloud Shell:**
 Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
 
-## 💻 **Execute in Cloud Shell** 
-
+## 💻 **Copy & run in terminal:**
+```bash
+python --version
+pip3 install tensorflow
+pip3 install --upgrade pip
+pip install -U pylint --user
+pip install -r requirements.txt
 ```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Introduction%20to%20Cloud%20Dataproc%20Hadoop%20and%20Spark%20on%20Google%20Cloud/GSP123.sh
-
-sudo chmod +x GSP123.sh
-
-./GSP123.sh
-```
----
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
