--- a/TensorFlow Qwik Start/GSP637.md
+++ b/TensorFlow Qwik Start/GSP637.md
@@ -30,8 +30,7 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
+### Download File From [Here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/blob/main/TensorFlow%20Qwik%20Start/model.ipynb)
 
 ## 💻 **Copy & run in terminal:**
 ```bash
