--- a/TensorFlow Qwik Start/GSP637.md
+++ b/TensorFlow Qwik Start/GSP637.md
@@ -40,6 +40,10 @@ pip3 install --upgrade pip
 pip install -U pylint --user
 pip install -r requirements.txt
 ```
+## 💻 **Copy & run in terminal:**
+```
+
+```
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
