--- a/TensorFlow Qwik Start/GSP637.md
+++ b/TensorFlow Qwik Start/GSP637.md
@@ -42,7 +42,7 @@ pip install -r requirements.txt
 ```
 ## 💻 **Copy & run in terminal:**
 ```
-
+curl -LO https://raw.githubusercontent.com/
 ```
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
