--- a/Optimizing Performance of LookML Queries/GSP985.md
+++ b/Optimizing Performance of LookML Queries/GSP985.md
@@ -201,7 +201,10 @@ explore: aggregated_orders {
   }
 }
 ```
-
+## Commit changes and deploy to production
+    * Click Validate LookML and then click Commit Changes & Push.
+    * Add a commit message and click Commit.
+    * Lastly, click Deploy to Production.
 ---
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
