--- a/Looker Studio: Qwik Start/GSP136.md
+++ b/Looker Studio: Qwik Start/GSP136.md
@@ -31,8 +31,8 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
+**🌐Launch looker studio:**
+Start your Google CloudShell session by [clicking here](hhttp://lookerstudio.google.com/).
 
 ## 💻 **Execute in Cloud Shell** 
 
