--- a/Looker Studio: Qwik Start/GSP136.md
+++ b/Looker Studio: Qwik Start/GSP136.md
@@ -32,7 +32,7 @@
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
 **🌐Launch looker studio:**
-Start your Google CloudShell session by [clicking here](hhttp://lookerstudio.google.com/).
+Start your Google CloudShell session by [clicking here](http://lookerstudio.google.com/).
 
 ## 💻 **Execute in Cloud Shell** 
 
