--- a/Looker Studio: Qwik Start/GSP136.md
+++ b/Looker Studio: Qwik Start/GSP136.md
@@ -34,15 +34,17 @@
 **🌐Launch looker studio:**
 Start your Google CloudShell session by [clicking here](http://lookerstudio.google.com/).
 
-## 💻 **Execute in Cloud Shell** 
+## 💻 Task 1. Create a new blank report
 
-```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Introduction%20to%20Cloud%20Dataproc%20Hadoop%20and%20Spark%20on%20Google%20Cloud/GSP123.sh
-
-sudo chmod +x GSP123.sh
-
-./GSP123.sh
-```
+* You are already on the reports home page.
+* Click the Plus Button to `create a new report`.
+* In the Account Setup screen, enter `Country` and `Company name`.
+* Accept the Looker Studio `Terms of Service` and click `Continue`.
+* Select No for `receiving Tips and recommendations`, `Product announcements` and `Market research`.
+* Click `Continue`.
+* Now click on the `Blank Report` plus button again.
+* Click `X` to close the Add data to report window.
+* Click Untitled Report in the top left corner of your screen and name your report "**`Analytics Test`**".
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
