--- a/Looker Studio: Qwik Start/GSP136.md
+++ b/Looker Studio: Qwik Start/GSP136.md
@@ -46,6 +46,7 @@ Start your Google CloudShell session by [clicking here](http://lookerstudio.goog
 * Click `X` to close the Add data to report window.
 * Click Untitled Report in the top left corner of your screen and name your report "**`Analytics Test`**".
 ---
+## 💻 Task 1. Create a new blank report
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
