--- a/Looker Studio: Qwik Start/GSP136.md
+++ b/Looker Studio: Qwik Start/GSP136.md
@@ -46,7 +46,20 @@ Start your Google CloudShell session by [clicking here](http://lookerstudio.goog
 * Click `X` to close the Add data to report window.
 * Click Untitled Report in the top left corner of your screen and name your report "**`Analytics Test`**".
 ---
-## 💻 Task 1. Create a new blank report
+## 💻 Task 2. Create a new connection and data source
+There is a list of Google connectors, which are the "pipes" that allow a Looker Studio data source to access the information stored in your data sets.
+
+From the toolbar, select Add data.
+
+From the list of Google Connectors, select the BigQuery tile.
+
+Then click on the Authorize button to let Looker Studio view your data in BigQuery.
+
+From the left menu, click Public Datasets > Your Project ID > san_francisco > bikeshare_trips.
+
+Then click Add in the bottom right corner.
+
+You will then be prompted with "You are about to add a data source to this report", click Add to report.
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
