--- a/Answering Complex Questions Using Native Derived Tables with LookML/GSP935.md
+++ b/Answering Complex Questions Using Native Derived Tables with LookML/GSP935.md
@@ -167,7 +167,7 @@ explore: events {
 
 # Place in `training_ecommerce` model
 explore: +order_items {
-  query: ArcadeWithUs1 {
+  query: Arcadewithus1 {
     dimensions: [brand_order_facts.brand_rank_grouped]
     measures: [total_revenue]
   }
