--- a/Implement the User Experience for your AppSheet App/GSP1029.md
+++ b/Implement the User Experience for your AppSheet App/GSP1029.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨  Autoscaling TensorFlow Model Deployments with TF Serving and Kubernetes || GSP777 ✨
+✨ Implement the User Experience for your AppSheet App || GSP1029 ✨
 </h1>
 
 <div align="center">
