--- a/Implement the User Experience for your AppSheet App/GSP1029.md
+++ b/Implement the User Experience for your AppSheet App/GSP1029.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨ Implement the User Experience for your AppSheet App || GSP1029 ✨
+ Implement the User Experience for your AppSheet App || GSP1029 
 </h1>
 
 <div align="center">
