--- a/Implement the User Experience for your AppSheet App/GSP1029.md
+++ b/Implement the User Experience for your AppSheet App/GSP1029.md
@@ -31,18 +31,37 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
+# Customer Contacts App Setup
 
-## 💻 **Execute in Cloud Shell** 
+This guide will help you copy the **Customer Contacts** app to your **AppSheet** account and start customizing it.
 
-```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Introduction%20to%20Cloud%20Dataproc%20Hadoop%20and%20Spark%20on%20Google%20Cloud/GSP123.sh
+## Steps to Copy and Set Up the App
 
-sudo chmod +x GSP123.sh
+1. **Copy the App to Your Account**
+   - Click the following link to copy the **Customer Contacts** app to your AppSheet account:
+     - [**Customer Contacts**](https://www.appsheet.com/Template/AppDef?appName=Lab2-CustomerContacts-3856613)
+   - In the left menu, click the **Copy app** icon.
 
-./GSP123.sh
-```
+2. **Copy the App Form**
+   - In the **Copy App** form:
+     - For **App name**, type: `Customer Contacts`.
+     - Leave the remaining settings as their defaults.
+   - Click **Copy app**.
+
+
+>[!IMPORTANT]
+> Now Check the Score For Task 1
+
+## Steps for remaining task 
+
+. **Copy the App to Your Account**
+   - Click the following link to copy the **Customer Contacts** app to your AppSheet account:
+     - [**Customer Contacts**](https://www.appsheet.com/Template/AppDef?appName=CustomerContacts-939262569&utm_source=share_app_link)
+   - In the left menu, click the **Copy app** icon.
+
+>[!IMPORTANT]
+> Now Check The Score.
+
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
