--- a/Get Started with Looker: Challenge Lab/ARC107.md
+++ b/Get Started with Looker: Challenge Lab/ARC107.md
@@ -28,7 +28,7 @@
 
 - Create a View with Name **`users_region`**
 
-```
+```cpp
 view: users_region {
   sql_table_name: cloud-training-demos.looker_ecomm.users ;;
   
@@ -56,7 +56,7 @@ view: users_region {
 ```
 
 - **`training_ecommerce.model`**
-```
+```cpp
 connection: "bigquery_public_data_looker"
 
 # include all the views
