--- a/Develop No-Code Chat Apps with AppSheet/GSP1146.md
+++ b/Develop No-Code Chat Apps with AppSheet/GSP1146.md
@@ -1,6 +1,5 @@
 <h1 align="center">
-✨  Autoscaling TensorFlow Model Deployments with TF Serving and Kubernetes || GSP777 ✨
-</h1>
+✨  Develop No-Code Chat Apps with AppSheet || GSP1146 ✨
 
 <div align="center">
   <a href="https://www.cloudskillsboost.google/focuses/49749?parent=catalog"_blank" rel="noopener noreferrer">
