--- a/Develop No-Code Chat Apps with AppSheet/GSP1146.md
+++ b/Develop No-Code Chat Apps with AppSheet/GSP1146.md
@@ -32,6 +32,7 @@
 
 ## 💻 Follow thw steps:
 
+]* Open this link in incognito tab: [Click](https://www.appsheet.com/template/AppDef?appName=ATMMaintenance-925818016)
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
