--- a/Develop No-Code Chat Apps with AppSheet/GSP1146.md
+++ b/Develop No-Code Chat Apps with AppSheet/GSP1146.md
@@ -32,7 +32,10 @@
 
 ## 💻 Follow thw steps:
 
-]* Open this link in incognito tab: [Click](https://www.appsheet.com/template/AppDef?appName=ATMMaintenance-925818016)
+* Open this link in incognito tab: [Click](https://www.appsheet.com/template/AppDef?appName=ATMMaintenance-925818016)
+* In the left navigation menu, click **Copy app**.
+* In the Copy app form, for App name, type `ATM Maintenance Tracker`, and leave the remaining settings as their defaults.
+* Click **Copy app**.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
