--- a/Develop No-Code Chat Apps with AppSheet/GSP1146.md
+++ b/Develop No-Code Chat Apps with AppSheet/GSP1146.md
@@ -36,6 +36,12 @@
 * In the left navigation menu, click **Copy app**.
 * In the Copy app form, for App name, type `ATM Maintenance Tracker`, and leave the remaining settings as their defaults.
 * Click **Copy app**.
+
+## For Task no 2 & 3 follow these steps:
+
+#### 💡 Open this link and download the file [Click Here](https://github.com/Techcps/Google-Cloud-Skills-Boost/blob/main/Develop%20No-Code%20Chat%20Apps%20with%20AppSheet/techcps.xlsx)
+####💡 Google Sheet [Click Here](https://docs.google.com/spreadsheets)
+
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
