--- a/Develop No-Code Chat Apps with AppSheet/GSP1146.md
+++ b/Develop No-Code Chat Apps with AppSheet/GSP1146.md
@@ -39,8 +39,8 @@
 
 ## For Task no 2 & 3 follow these steps:
 
-#### 💡Google Sheet [Click Here](https://docs.google.com/spreadsheets)
-#### 💡 Open this link and download the file [Click Here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/blob/main/Develop%20No-Code%20Chat%20Apps%20with%20AppSheet/ArcadeWithUs.xlsx) 
+#### 💡Open Google Sheet in incognito window: [Click Here](https://docs.google.com/spreadsheets)
+#### 💡 Open this link and download the file: [Click Here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/blob/main/Develop%20No-Code%20Chat%20Apps%20with%20AppSheet/ArcadeWithUs.xlsx) 
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
