--- a/Develop No-Code Chat Apps with AppSheet/GSP1146.md
+++ b/Develop No-Code Chat Apps with AppSheet/GSP1146.md
@@ -41,6 +41,10 @@
 
 #### 💡Open Google Sheet in incognito window: [Click Here](https://docs.google.com/spreadsheets)
 #### 💡 Open this link and download the file: [Click Here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/blob/main/Develop%20No-Code%20Chat%20Apps%20with%20AppSheet/ArcadeWithUs.xlsx) 
+
+* Now in google sheet, open the Tickets.xlsx sheet and upload the sheet which you have downloaded from repository.
+* Choose Replace with the spreadsheets
+* In Appsheet,
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
