--- a/Looker Developer: Qwik Start/GSP891.md
+++ b/Looker Developer: Qwik Start/GSP891.md
@@ -25,7 +25,7 @@
 - Create a View with Name **`users_limited`**.
 
 
-```
+```cpp
 view: users_limited {
   sql_table_name: `cloud-training-demos.looker_ecomm.users` ;;
   dimension: id {
@@ -63,7 +63,7 @@ view: users_limited {
 
 - **`training_ecommerce.model`**
 
-```
+```cpp
 connection: "bigquery_public_data_looker"
 
 # include all the views
