--- a/Looker Developer: Qwik Start/GSP891.md
+++ b/Looker Developer: Qwik Start/GSP891.md
@@ -21,9 +21,15 @@
 ### ©Credit
 - **DM for credit or removal request (no copyright intended) ©All rights and credits for the original content belong to Google Cloud [Google Cloud Skill Boost website](https://www.cloudskillsboost.google/)** 🙏
 
+## ⚙️ <ins>Lab Environment Setup</ins>
+
+> ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
+
+### 🚨 First, click the toggle button to turn on the Development mode.
+![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
+
 ---
 - Create a View with Name **`users_limited`**.
-
 
 ```cpp
 view: users_limited {
