--- a/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
+++ b/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
@@ -31,18 +31,8 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
-
-## 💻 **Execute in Cloud Shell** 
-
-```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Introduction%20to%20Cloud%20Dataproc%20Hadoop%20and%20Spark%20on%20Google%20Cloud/GSP123.sh
-
-sudo chmod +x GSP123.sh
-
-./GSP123.sh
-```
+### For task no1: 
+* Log in to Sheets using the credentials provided, and then Go to **Data**-->**Connectors**-->**Connect to Bigquery**
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
