--- a/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
+++ b/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
@@ -33,6 +33,7 @@
 
 ### For task no1: 
 * Log in to Sheets using the credentials provided, and then Go to **Data**-->**Connectors**-->**Connect to Bigquery**
+* Then Choose Your **Project Id**-->**Public dataset**--> **new_york_taxi_trip**--> **tlc_yellow_trips_2022**.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
