--- a/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
+++ b/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
@@ -31,9 +31,14 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-### For task no1: 
+### For Task 1: 
 * Log in to Sheets using the credentials provided, and then Go to **Data**-->**Connectors**-->**Connect to Bigquery**
 * Then Choose Your **Project Id**-->**Public dataset**--> **new_york_taxi_trip**--> **tlc_yellow_trips_2022**.
+
+### For TASK 2:
+```
+=COUNTIF(tlc_yellow_trips_2022!airport_fee, "1")
+```
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
