--- a/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
+++ b/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
@@ -39,6 +39,11 @@
 ```
 =COUNTIF(tlc_yellow_trips_2022!airport_fee, "1")
 ```
+
+### For Task 3:
+* Choose **Chart**-->**Pie Chart**
+* In label field choose `payment_type`
+* In Value field Choose `fare_amount`
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
