--- a/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
+++ b/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
@@ -44,6 +44,14 @@
 * Choose **Chart**-->**Pie Chart**
 * In label field choose `payment_type`
 * In Value field Choose `fare_amount`
+
+### For TASK 3:
+* Extract 10,000 rows of data from the columns
+    * pickup_datetime
+    * dropoff_datetime
+    * trip_distance
+    * fare_amount
+* Sort it with `trip_distance` and make it in decending order.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
