--- a/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
+++ b/Analyze BigQuery data in Connected Sheets: Challenge Lab/ARC103.md
@@ -45,13 +45,23 @@
 * In label field choose `payment_type`
 * In Value field Choose `fare_amount`
 
-### For TASK 3:
+### For TASK 4:
 * Extract 10,000 rows of data from the columns
     * pickup_datetime
     * dropoff_datetime
     * trip_distance
     * fare_amount
 * Sort it with `trip_distance` and make it in decending order.
+
+### TASK 5:
+```
+=IF(fare_amount>0,tip_amount/fare_amount*100,0)
+```
+* Name of the calculated column-
+
+  ```
+  ArcadeWithUs
+  ```
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
