--- a/Google Sheets: Getting Started/GSP469.md
+++ b/Google Sheets: Getting Started/GSP469.md
@@ -31,18 +31,10 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
-
-## 💻 **Execute in Cloud Shell** 
-
-```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Introduction%20to%20Cloud%20Dataproc%20Hadoop%20and%20Spark%20on%20Google%20Cloud/GSP123.sh
-
-sudo chmod +x GSP123.sh
-
-./GSP123.sh
-```
+### For TASK 1:
+* Click [Explore this data](https://docs.google.com/spreadsheets/d/19iLO-XbrqqWRuqphkXTax0lFn71NW6crJK504JvAxoU/edit#gid=599358521) to open a sample spreadsheet.
+* Make a copy. Select **File** > **Make a copy**.
+* Leave the Name and Folder fields at the default values and click **Make a copy**.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
