--- a/Google Sheets: Getting Started/GSP469.md
+++ b/Google Sheets: Getting Started/GSP469.md
@@ -35,6 +35,11 @@
 * Click [Explore this data](https://docs.google.com/spreadsheets/d/19iLO-XbrqqWRuqphkXTax0lFn71NW6crJK504JvAxoU/edit#gid=599358521) to open a sample spreadsheet.
 * Make a copy. Select **File** > **Make a copy**.
 * Leave the Name and Folder fields at the default values and click **Make a copy**.
+
+- ### DOWNLOAD CSV FILE FROM [HERE](https://github.com/Titash-shil/Google-Sheets-Getting-Started-GSP469/blob/main/exported-data.csv)
+
+- ### DOWNLOAD XLSX FILE FROM [HERE](https://github.com/Titash-shil/Google-Sheets-Getting-Started-GSP469/blob/main/important-data.xlsx)
+
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
