--- a/Google Sheets: Getting Started/GSP469.md
+++ b/Google Sheets: Getting Started/GSP469.md
@@ -36,7 +36,7 @@
 * Make a copy. Select **File** > **Make a copy**.
 * Leave the Name and Folder fields at the default values and click **Make a copy**.
 
-- ### DOWNLOAD CSV FILE FROM [HERE](https://github.com/Titash-shil/Google-Sheets-Getting-Started-GSP469/blob/main/exported-data.csv)
+- ### DOWNLOAD CSV FILE FROM [HERE](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Google%20Sheets:%20Getting%20Started/exported-data.csv)
 
 - ### DOWNLOAD XLSX FILE FROM [HERE](https://github.com/Titash-shil/Google-Sheets-Getting-Started-GSP469/blob/main/important-data.xlsx)
 
