--- a/Google Sheets: Getting Started/GSP469.md
+++ b/Google Sheets: Getting Started/GSP469.md
@@ -38,7 +38,7 @@
 
 - ### DOWNLOAD CSV FILE FROM [HERE](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Google%20Sheets:%20Getting%20Started/exported-data.csv)
 
-- ### DOWNLOAD XLSX FILE FROM [HERE](https://github.com/Titash-shil/Google-Sheets-Getting-Started-GSP469/blob/main/important-data.xlsx)
+- ### DOWNLOAD XLSX FILE FROM [HERE](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Google%20Sheets:%20Getting%20Started/important-data.xlsx)
 
 ---
 
