--- a/Google Chat Bot - Apps Script/GSP250.md
+++ b/Google Chat Bot - Apps Script/GSP250.md
@@ -28,7 +28,7 @@
 
 2.  🖱️ Click **Untitled project** (the current name).
 
-3.  ✏️ In the **Edit project name** dialog, rename the project to **`Attendance Bot`**, and then click **Rename**.
+3.  ✏️ In the **Edit project name** dialog, rename the project to **`Friendly Bot`**, and then click **Rename**.
 
 4.  📄 Copy and replace the *entire content* of the `Code.gs` file with the following JavaScript code:
 
