--- a/Google Chat Bot - Apps Script/GSP250.md
+++ b/Google Chat Bot - Apps Script/GSP250.md
@@ -105,6 +105,10 @@
     | **User support email**        | Select your email ID from the dropdown |
     | **Developer contact information** | Enter your user email address          |
 
+3. For the **Contact Information** type or paste your **user email** address and click Next.
+
+4. For **GCP Project number**, enter your project number.
+
 ➡️ **Navigate to Google Chat API Configuration:**
 
 *   Go to the **Google Chat API Configuration Page** using this link: [Google Chat API Config](https://console.cloud.google.com/apis/api/chat.googleapis.com/hangouts-chat?)
