--- a/Introduction to Google Chat Bots with Apps Script/GSP250.md
+++ b/Introduction to Google Chat Bots with Apps Script/GSP250.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨🌐   Google Chat Bot - Apps Script || GSP250 ✨
+✨ Introduction to Google Chat Bots with Apps Script || GSP250 ✨
 <div align="center">
 <a href="https://www.cloudskillsboost.google/focuses/32756?parent=catalog" target="_blank" rel="noopener noreferrer">
     <img src="https://img.shields.io/badge/Open_Lab-Cloud_Skills_Boost-4285F4?style=for-the-badge&logo=google&logoColor=white&labelColor=34A853" alt="Open Lab Badge">
