--- a/Introduction to Google Chat Bots with Apps Script/GSP250.md
+++ b/Introduction to Google Chat Bots with Apps Script/GSP250.md
@@ -70,7 +70,7 @@
         // Bot added through @mention.
         message = message + " and you said: \"" + event.message.text + "\"";
       }
-      console.log('Attendance Bot added in ', event.space.name);
+      console.log('Friendly Bot added in ', event.space.name);
       return { "text": message };
     }
 
@@ -101,7 +101,7 @@
 
     | Field                         | Value                                  |
     | :---------------------------- | :------------------------------------- |
-    | **App name**                  | `Attendance Bot`                       |
+    | **App name**                  | `Friendly Bot`                       |
     | **User support email**        | Select your email ID from the dropdown |
     | **Developer contact information** | Enter your user email address          |
 
@@ -117,7 +117,7 @@
 
     | Field                     | Value                                                              |
     | :------------------------ | :----------------------------------------------------------------- |
-    | **App name**              | `Attendance Bot`                                                   |
+    | **App name**              | `Friendly Bot`                                                   |
     | **Avatar URL**            | `https://goo.gl/kv2ENA`                                            |
     | **Description**           | `Apps Script lab bot`                                              |
     | **Functionality**         | Select **Receive 1:1 messages** *and* **Join spaces and group conversations** |
@@ -130,9 +130,9 @@
 
 6.  ➕ In the **Chat** section on the left, select **Start a chat** (or the `+` icon).
 
-7.  🔍 Search for **`Attendance bot`**.
+7.  🔍 Search for **`Friendly Bot`**.
 
-8.  🖱️ From the search results, select the **Attendance Bot** (Apps Script lab bot) that you just configured, and click **Start chat**.
+8.  🖱️ From the search results, select the **Friendly Bot** (Apps Script lab bot) that you just configured, and click **Start chat**.
 
 ---
 
@@ -144,7 +144,7 @@
     var DEFAULT_IMAGE_URL = 'https://goo.gl/bMqzYS';
     var HEADER = {
       header: {
-        title : 'Attendance Bot',
+        title : 'Friendly Bot',
         subtitle : 'Log your vacation time',
         imageUrl : DEFAULT_IMAGE_URL
       }
@@ -205,7 +205,7 @@
         // Bot added through @mention.
         message = message + " and you said: \"" + event.message.text + "\"";
       }
-      console.log('Attendance Bot added in ', event.space.name);
+      console.log('Friendly Bot added in ', event.space.name);
       return { "text": message };
     }
 
@@ -222,7 +222,7 @@
 
 2.  💾 Click **Save** to save the updated `Code.gs` file.
 
-3.  💬 Go back to your Google Chat DM with the **Attendance Bot**. Type any message, for example: **`Hello`** and press Enter. You should see a card response now.
+3.  💬 Go back to your Google Chat DM with the **Friendly Bot**. Type any message, for example: **`Hello`** and press Enter. You should see a card response now.
 
 ---
 
@@ -234,7 +234,7 @@
     var DEFAULT_IMAGE_URL = 'https://goo.gl/bMqzYS';
     var HEADER = {
       header: {
-        title : 'Attendance Bot',
+        title : 'Friendly Bot',
         subtitle : 'Log your vacation time',
         imageUrl : DEFAULT_IMAGE_URL
       }
@@ -340,7 +340,7 @@
         // Bot added through @mention.
         message = message + " and you said: \"" + event.message.text + "\"";
       }
-      console.log('Attendance Bot added in ', event.space.name);
+      console.log('Friendly Bot added in ', event.space.name);
       return { "text": message };
     }
 
@@ -389,7 +389,7 @@
         Gmail.Users.Settings.updateVacation({
           enableAutoReply: true,
           responseSubject: reason,
-          responseBodyHtml: "I'm out of the office today; will be back on the next business day.<br><br><i>Created by Attendance Bot!</i>",
+          responseBodyHtml: "I'm out of the office today; will be back on the next business day.<br><br><i>Created by Friendly Bot!</i>",
           restrictToContacts: true,
           restrictToDomain: true,
           startTime: currentTime,
@@ -426,7 +426,7 @@
     *   Scroll or search for **`Gmail API`** in the list, select it.
     *   Click the **Add** button. *(This grants the script permission to interact with Gmail)*.
 
-4.  💬 Go back to your Google Chat DM with the **Attendance Bot**. Type the message: **`I'm sick`** and press Enter.
+4.  💬 Go back to your Google Chat DM with the **Friendly Bot**. Type the message: **`I'm sick`** and press Enter.
     *   You should see a card with buttons. Click one of the buttons.
     *   You might be prompted to authorize the script the first time you click a button that interacts with Gmail or Calendar. Review the permissions and click **Allow**.
 
