--- a/App Building with AppSheet: Challenge Lab/ARC105.md
+++ b/App Building with AppSheet: Challenge Lab/ARC105.md
@@ -31,9 +31,9 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-1. Open the link in another browser tab to copy the Customer Contacts app to your AppSheet account: [Customer contacts](https://docs.google.com/spreadsheets/d/1fsusJTqRwsURG9GpduXVZE8XXfv9vzq5XXI9jBlcq9M/copy)
+1. Open the link in another browser tab to copy the Customer Contacts app to your AppSheet account: [copy of companies](https://docs.google.com/spreadsheets/d/1fsusJTqRwsURG9GpduXVZE8XXfv9vzq5XXI9jBlcq9M/copy)
 
-* Change the name: **`contacts`**
+* Change the name: **`companies`**
 
 2. Download File from [here](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/App%20Building%20with%20AppSheet:%20Challenge%20Lab/companies(ArcadeWithUs).xlsx)
 
@@ -41,7 +41,7 @@
 
 4. Create an AppSheet app named **`Company Details`** and choose **`Customer Engagement`** from the dropdown of existing data
 
-5. Choose Google sheets and then choose **`contacts`**.
+5. Choose Google sheets and then choose **`companies`**.
 
 ---
 
