--- a/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
+++ b/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
@@ -31,17 +31,34 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
+# Task 1 
+```
+Update the region
+```
 
-## 💻 **Execute in Cloud Shell** 
+# Task 2
 
 ```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Introduction%20to%20Cloud%20Dataproc%20Hadoop%20and%20Spark%20on%20Google%20Cloud/GSP123.sh
+Code == Tool(code_execution=ToolCodeExecution())
 
-sudo chmod +x GSP123.sh
+Remove the prompt = f"""what is the average price of sneakers in {sneaker_prices}
+Generate and run code for the calculation."""
+```
 
-./GSP123.sh
+# Task 3 
+
+```
+google_search_tool = Tool(google_search=GoogleSearch())
+update the prompt = " what are the "
+
+Config=GenerateContentConfig(tools=[google_search_tool]),
+```
+
+
+# Task 4
+```
+Query remove the starting lines add -- f"{model} price at {retailer}" ""
+response_schema=response_schema,
 ```
 ---
 
