--- a/Build LookML Objects in Looker: Challenge Lab/GSP361.md
+++ b/Build LookML Objects in Looker: Challenge Lab/GSP361.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨🌐  Build LookML Objects in Looker: Challenge Lab || GSP361 ✨
+✨  Build LookML Objects in Looker: Challenge Lab || GSP361 ✨
 </h1>
 
 <div align="center">
