--- a/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
+++ b/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
@@ -60,6 +60,7 @@ Config=GenerateContentConfig(tools=[google_search_tool]),
 Query remove the starting lines add -- f"{model} price at {retailer}" ""
 response_schema=response_schema,
 ```
+## Or directly download the jupyetlab file from here into your jupyterlab terminal: [Download]()
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
