--- a/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
+++ b/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
@@ -60,7 +60,13 @@ Config=GenerateContentConfig(tools=[google_search_tool]),
 Query remove the starting lines add -- f"{model} price at {retailer}" ""
 response_schema=response_schema,
 ```
-## Or directly download the jupyetlab file from here into your jupyterlab terminal: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Enhance%20Gemini%20Model%20Capabilities:%20Challenge%20Lab/enhance-gemini-model-capabilities-v2.0.0.ipynb)
+## Or directly download the jupyetlab file from here into your jupyterlab terminal:
+
+```
+rm enhance-gemini-model-capabilities-v2.0.0.ipynb
+
+curl -LO raw.githubusercontent.com/
+```
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
