--- a/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
+++ b/Enhance Gemini Model Capabilities: Challenge Lab/GSP525.md
@@ -65,7 +65,7 @@ response_schema=response_schema,
 ```
 rm enhance-gemini-model-capabilities-v2.0.0.ipynb
 
-curl -LO raw.githubusercontent.com/
+curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Enhance%20Gemini%20Model%20Capabilities%3A%20Challenge%20Lab/enhance-gemini-model-capabilities-v2.0.0.ipynb
 ```
 ---
 
