--- a/Prepare Data for Looker Dashboards and Reports: Challenge Lab/GSP346.md
+++ b/Prepare Data for Looker Dashboards and Reports: Challenge Lab/GSP346.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨  Autoscaling TensorFlow Model Deployments with TF Serving and Kubernetes || GSP777 ✨
+✨  Prepare Data for Looker Dashboards and Reports: Challenge Lab || GSP346 ✨
 </h1>
 
 <div align="center">
