--- a/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
+++ b/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨  Autoscaling TensorFlow Model Deployments with TF Serving and Kubernetes || GSP777 ✨
+✨  Creating a Looker Modeled Query and Working with Quick Start|| GSP984 ✨
 </h1>
 
 <div align="center">
