--- a/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
+++ b/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
@@ -30,19 +30,8 @@
 ## ⚙️ <ins>Lab Environment Setup</ins>
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
-
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
-
-## 💻 **Execute in Cloud Shell** 
-
-```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Introduction%20to%20Cloud%20Dataproc%20Hadoop%20and%20Spark%20on%20Google%20Cloud/GSP123.sh
-
-sudo chmod +x GSP123.sh
-
-./GSP123.sh
-```
+### 🚨 First, click the toggle button to turn on the Development mode.
+![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
