--- a/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
+++ b/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
@@ -33,7 +33,78 @@
 ### 🚨 First, click the toggle button to turn on the Development mode.
 ![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
 
-### 📝 Step 1: Update the `training_ecommerce` Model File
+### 📝 Step 1: Update the `training_ecommerce` Model File:
+```
+connection: "bigquery_public_data_looker"
+
+# include all the views
+include: "/views/*.view"
+include: "/z_tests/*.lkml"
+include: "/**/*.dashboard"
+
+datagroup: training_ecommerce_default_datagroup {
+  # sql_trigger: SELECT MAX(id) FROM etl_log;;
+  max_cache_age: "1 hour"
+}
+
+persist_with: training_ecommerce_default_datagroup
+
+label: "E-Commerce Training"
+
+explore: order_items {
+  join: users {
+    type: left_outer
+    sql_on: ${order_items.user_id} = ${users.id} ;;
+    relationship: many_to_one
+  }
+
+  join: inventory_items {
+    type: left_outer
+    sql_on: ${order_items.inventory_item_id} = ${inventory_items.id} ;;
+    relationship: many_to_one
+  }
+
+  join: products {
+    type: left_outer
+    sql_on: ${inventory_items.product_id} = ${products.id} ;;
+    relationship: many_to_one
+  }
+
+  join: distribution_centers {
+    type: left_outer
+    sql_on: ${products.distribution_center_id} = ${distribution_centers.id} ;;
+    relationship: many_to_one
+  }
+}
+
+# Place in `training_ecommerce` model
+explore: +order_items {
+  query: MazeKro{
+      dimensions: [products.department, users.state]
+      measures: [order_count, users.count]
+      filters: [users.country: "USA"]
+    }
+}
+
+
+explore: events {
+  join: event_session_facts {
+    type: left_outer
+    sql_on: ${events.session_id} = ${event_session_facts.session_id} ;;
+    relationship: many_to_one
+  }
+  join: event_session_funnel {
+    type: left_outer
+    sql_on: ${events.session_id} = ${event_session_funnel.session_id} ;;
+    relationship: many_to_one
+  }
+  join: users {
+    type: left_outer
+    sql_on: ${events.user_id} = ${users.id} ;;
+    relationship: many_to_one
+  }
+}
+```
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
