--- a/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
+++ b/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
@@ -34,7 +34,7 @@
 ![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
 
 ### 📝 Step 1: Update the `training_ecommerce` Model File:
-```
+```cpp
 connection: "bigquery_public_data_looker"
 
 # include all the views
