--- a/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
+++ b/Creating a Looker Modeled Query and Working with Quick Start/GSP984.md
@@ -105,6 +105,14 @@ explore: events {
   }
 }
 ```
+### 📝 Step 2: Manual configuaration:
+1. In the Data pane, click on the gear icon on column name **Products Department** and select **pivot**.
+2. In the Data pane, click on the gear icon on column name **Users Count** and select **Hide from Visualization**.
+3. Expand Visualization pane and choose **Column chart.**
+4. Click on the gear icon in the Visualization pane. Under **Plot**, choose **Stacked** as Series Positioning.
+5. Click on gear icon next to Run (top right of page), and select Save > **As a Look**.
+6. Enter a title for the Look report, **`Order Items Count per State`**. Chose the Shared folder to save the report.
+7. Click Save.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
