--- a/Secure Data Lake on Cloud Storage : Challenge Lab/ARC119.md
+++ b/Secure Data Lake on Cloud Storage : Challenge Lab/ARC119.md
@@ -136,7 +136,7 @@ curl -LO https://raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs
 
 sudo chmod +x ARC119-4.sh
 
-./GSP119-4.sh
+./ARC119-4.sh
 ```
 
 ---
