--- a/Develop with Apps Script and AppSheet: Challenge Lab/ARC126.md
+++ b/Develop with Apps Script and AppSheet: Challenge Lab/ARC126.md
@@ -138,11 +138,11 @@
         </tr>
         <tr style="background-color: #ffffff; border-top: 1px solid #dfe2e5;">
           <td style="padding: 10px 15px; border: 1px solid #dfe2e5;">User support email</td>
-          <td style="padding: 10px 15px; border: 1px solid #dfe2e5;">*Your selected email*</td>
+          <td style="padding: 10px 15px; border: 1px solid #dfe2e5;">**Your selected email**</td>
         </tr>
         <tr style="background-color: #f6f8fa; border-top: 1px solid #dfe2e5;">
           <td style="padding: 10px 15px; border: 1px solid #dfe2e5;">Developer contact</td>
-          <td style="padding: 10px 15px; border: 1px solid #dfe2e5;">*Your email address*</td>
+          <td style="padding: 10px 15px; border: 1px solid #dfe2e5;">**Your email address**</td>
         </tr>
       </tbody>
     </table>
