--- a/Get Started with Looker: Challenge Lab/ARC107.md
+++ b/Get Started with Looker: Challenge Lab/ARC107.md
@@ -25,7 +25,13 @@
 
 ## ⚙️ <ins>Lab Environment Setup</ins>
 ---
+#### For Task 1:
+1. Open Looker Studio: [Click Here](http://lookerstudio.google.com/)
+2. connect to Public datasets > <filled in at lab start> > thelook_ecommerce > orders.
 
+#### For Task 2:
+### 🚨 First, click the toggle button to turn on the Development mode.
+![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
 - Create a View with Name **`users_region`**
 
 ```cpp
