--- a/Get Started with Looker: Challenge Lab/ARC107.md
+++ b/Get Started with Looker: Challenge Lab/ARC107.md
@@ -128,8 +128,13 @@ explore: events {
   }
 }
 ```
+* Click **Save Changes**.
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
+* Next, navigate to the Explore Page.
 
-## For the 3rd Task:
+#### For the 3rd Task:
 * Go to looker-->Explore-->Events
 * Select `Event type` dimension
 * Select `Count` dimension from `Users Region`
