--- a/Get Started with Looker: Challenge Lab/ARC107.md
+++ b/Get Started with Looker: Challenge Lab/ARC107.md
@@ -141,7 +141,11 @@ explore: events {
 * Set row limit to `3`
 * Make sure to set the arrow as down for the dimension `Count`
 * Choose Bar as visualisation method
-* Save as exsisting View--> name of file `top 3 event types based on the highest number of users and dashboard name will be `User Events`
+* Save as exsisting Dashboard--> name of file
+    ```
+      top 3 event types based on the highest number of users
+    ```
+     and dashboard name will be ``User Events`
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
