--- a/Get Started with Looker: Challenge Lab/ARC107.md
+++ b/Get Started with Looker: Challenge Lab/ARC107.md
@@ -145,7 +145,10 @@ explore: events {
     ```
       top 3 event types based on the highest number of users
     ```
-     and dashboard name will be ``User Events`
+* The dashboard name will be
+  ```
+      User Events
+  ```
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
