--- a/Looker Developer: Qwik Start/GSP891.md
+++ b/Looker Developer: Qwik Start/GSP891.md
@@ -138,6 +138,11 @@ explore: events {
 }
 
 ```
+* Click **Save Changes**.
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
+---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
