--- a/Using Custom Fields in Looker Explores /GSP983.md
+++ b/Using Custom Fields in Looker Explores /GSP983.md
@@ -38,7 +38,7 @@
 
 1. Click the **`Explore`** tab and then select **`E-Commerce Training`** > **`Order Items`**
 2. Expand the **`Inventory`** Items section.
-3. Click More next to the **`Cost dimension`** to review the custom fields you can add.
+3. Click More next to the **`Cost`** dimension to review the custom fields you can add.
 4. Select the **`Aggregate`** > **`Average`** custom field to create a measure that calculates the average of an order item’s cost.
 ---
 ![ArcadeWithUs](https://cdn.qwiklabs.com/8JEOE1CTMSTBLL16%2BBGgQtWAt%2FRrvNjN7wzYGaUw97M%3D)
