--- a/Using Custom Fields in Looker Explores /GSP983.md
+++ b/Using Custom Fields in Looker Explores /GSP983.md
@@ -37,7 +37,7 @@
 ![AracdeWithUs](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
 
 1. Click the **`Explore`** tab and then select **`E-Commerce Training`** > **`Order Items`**
-2. Expand the **`Inventory`** Items section.
+2. Expand the **`Inventory Items`** section.
 3. Click More next to the **`Cost`** dimension to review the custom fields you can add.
 4. Select the **`Aggregate`** > **`Average`** custom field to create a measure that calculates the average of an order item’s cost.
 ---
